
- LineReaderActorConfig as a new resource!

shit from ldspcn
- remove chunks as a concept in line reader
- numerous bug fixes
- goto highlight flash
- fix punctuation text option
- speaker search utility in editor
- linearize_pages
- introduce generic subwindow to editor
- text export
- better scroll in editor
- better performance
- add ability to skip entire pages
- rubies

General
- Introduce text IDs
- Change to Godot 4.4.1
- option to delete dropdowns
- Skip line option
- clean up documentation, especially LineReader and ParserEvents
- fixes all around
- automatically check for updates (can be disabled in Project Settings)
- Refactor the entire instruction system
- InstructionHandler is gone

Editor
- Add text ingestion (TextToDiisis) (raw text ingestion into text boxes and files at large)
- instructions:
	- add default args
	- dropdown arg limiters
- Option for Save on Play (true by default)
- General layout improvements & slimmification
- Incoming references window for Jump Page/Loopback
- fact deletion warning (if a page, line, or choice item contains a fact, this warns you of it. can be disabled in preferences)
- add editor menu
	- step through pages
	- editor reload
- silly.
- new fonts
- Conditionals collapsing
- choice item views
- incoming page refs
- more bbcode in hinting

Runtime
- name style prepend got a few more options and consistency 
- add ParserEvents: skipped, advanced
- add LineReader: virtual_choices, choice_pressed_virtual, chatlog_tint_full_line, text_content_word_wrappers, body_label_function_funnel
- rename and restructure some variables (most notably text_content is now body_label)
- Parser.reset_and_start got line index argument (ioydoy cameo)
- remove LineReader: property_for_name (was depricated) and inline_evaluator (merged with instruction_handler)
- (de)serializes the function execution state now. So even when executing a function, you can quit the game and just persist all the things