@@ -189,3 +189,37 @@ func flash_highlight(highlight:ColorRect):
 	highlight.self_modulate.a = 0.4
 	var t = create_tween()
 	t.tween_property(highlight, "self_modulate:a", 0, 4).set_ease(Tween.EASE_IN_OUT)
+
+
+func array_equals(a:Array, b:Array) -> bool:
+	a.sort()
+	b.sort()
+	if a.size() != b.size():
+		return false
+	for i in a.size():
+		var value_a = a[i]
+		var value_b = b[i]
+		if (value_a != value_b) or (typeof(value_a) != typeof(value_b)):
+			if typeof(value_a) == TYPE_ARRAY and typeof(value_b) == TYPE_ARRAY:
+				return array_equals(value_a, value_b)
+			if typeof(value_a) == TYPE_DICTIONARY and typeof(value_b) == TYPE_DICTIONARY:
+				return dictionary_equals(value_a, value_b)
+			return false
+	return true
+
+func dictionary_equals(a:Dictionary, b:Dictionary) -> bool:
+	if a.size() != b.size():
+		return false
+	for key in a.keys():
+		if not b.keys().has(key):
+			return false
+	for key in a.keys():
+		var value_a = a.get(key)
+		var value_b = b.get(key)
+		if (value_a != value_b) or (typeof(value_a) != typeof(value_b)):
+			if typeof(value_a) == TYPE_ARRAY and typeof(value_b) == TYPE_ARRAY:
+				return array_equals(value_a, value_b)
+			if typeof(value_a) == TYPE_DICTIONARY and typeof(value_b) == TYPE_DICTIONARY:
+				return dictionary_equals(value_a, value_b)
+			return false
+	return true
